refactor : corrigindo erros de sintaxe simples